[gd_scene load_steps=34 format=3 uid="uid://c8m67p3f82wx0"]

[ext_resource type="Script" uid="uid://n6ikjxkq238o" path="res://Games/game_1.gd" id="1_q5wpw"]
[ext_resource type="FontFile" uid="uid://bgrgca3qc6dxo" path="res://Assets/Fonts/Silkscreen-Regular.ttf" id="2_4h6do"]
[ext_resource type="Texture2D" uid="uid://xlmmb4ylfdf4" path="res://Assets/Pocholo-Sheet.png" id="2_5w41k"]
[ext_resource type="Texture2D" uid="uid://blgnfxw53c6ia" path="res://Assets/Slime-Sheet.png" id="3_b80xg"]
[ext_resource type="Texture2D" uid="uid://cni1kh18aowxm" path="res://Assets/UI/Heart.png" id="4_b80xg"]
[ext_resource type="Texture2D" uid="uid://do6qelurv8g4w" path="res://Assets/Tilemaps/Room11-15Tilemap.png" id="6_gfijl"]
[ext_resource type="PackedScene" uid="uid://br1qr3dy734ud" path="res://Games/Healtbars/healthbar-enemy.tscn" id="7_w14is"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7mjov"]
atlas = ExtResource("2_5w41k")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv7jk"]
atlas = ExtResource("2_5w41k")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y2jg"]
atlas = ExtResource("2_5w41k")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd8sk"]
atlas = ExtResource("2_5w41k")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nbcc"]
atlas = ExtResource("2_5w41k")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cqnt"]
atlas = ExtResource("2_5w41k")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1jsl"]
atlas = ExtResource("2_5w41k")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5k4k"]
atlas = ExtResource("2_5w41k")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpm7p"]
atlas = ExtResource("2_5w41k")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c55eq"]
atlas = ExtResource("2_5w41k")
region = Rect2(736, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w41k"]
atlas = ExtResource("2_5w41k")
region = Rect2(992, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b80xg"]
atlas = ExtResource("2_5w41k")
region = Rect2(1024, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w14is"]
atlas = ExtResource("2_5w41k")
region = Rect2(1056, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2u18"]
atlas = ExtResource("2_5w41k")
region = Rect2(1088, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlkqd"]
atlas = ExtResource("2_5w41k")
region = Rect2(1120, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h6do"]
atlas = ExtResource("2_5w41k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfijl"]
atlas = ExtResource("2_5w41k")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w14is"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mjov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv7jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y2jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd8sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nbcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cqnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1jsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5k4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpm7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c55eq")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w41k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b80xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w14is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2u18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlkqd")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h6do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfijl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ant2b"]
atlas = ExtResource("3_b80xg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_37jos"]
atlas = ExtResource("3_b80xg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_d2u18"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ant2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37jos")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_4h6do"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HPItem:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 44)]
}

[sub_resource type="Animation" id="Animation_b80xg"]
resource_name = "new_animation"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HPItem:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 44), Vector2(40, 57)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfijl"]
_data = {
&"RESET": SubResource("Animation_4h6do"),
&"new_animation": SubResource("Animation_b80xg")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w14is"]
texture = ExtResource("6_gfijl")
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
16:0/0 = 0
17:0/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
16:1/0 = 0
17:1/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
16:2/0 = 0
17:2/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0

[sub_resource type="TileSet" id="TileSet_ant2b"]
sources/0 = SubResource("TileSetAtlasSource_w14is")

[node name="Game1" type="Node2D"]
script = ExtResource("1_q5wpw")

[node name="HPLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("2_4h6do")
theme_override_font_sizes/font_size = 24
text = "HP: 5/5"
metadata/_edit_use_anchors_ = true

[node name="TimerLabel" type="Label" parent="."]
offset_left = 987.0
offset_top = 11.0
offset_right = 1137.0
offset_bottom = 45.0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_4h6do")
theme_override_font_sizes/font_size = 24
text = "Time: 30s"
metadata/_edit_use_anchors_ = true

[node name="Question" type="Label" parent="."]
custom_minimum_size = Vector2(900, 70)
offset_left = 40.0
offset_top = 349.0
offset_right = 1104.0
offset_bottom = 431.0
theme_override_fonts/font = ExtResource("2_4h6do")
theme_override_font_sizes/font_size = 28
text = "Loading... ghjhfhfghfhfghfghf hfghfghfghfghf hfghfhfhfghhfghfhfhfhfhfghfhfghfghfgh"
autowrap_mode = 2

[node name="Option1Button" type="Button" parent="."]
custom_minimum_size = Vector2(300, 70)
offset_left = 230.0
offset_top = 439.0
offset_right = 530.0
offset_bottom = 509.0
theme_override_font_sizes/font_size = 18
text = "Option 1"

[node name="Option2Button" type="Button" parent="."]
custom_minimum_size = Vector2(300, 70)
offset_left = 630.0
offset_top = 439.0
offset_right = 930.0
offset_bottom = 509.0
theme_override_font_sizes/font_size = 18
text = "Option 2"

[node name="FeedbackLabel" type="Label" parent="."]
custom_minimum_size = Vector2(700, 100)
offset_left = 236.0
offset_top = 529.0
offset_right = 936.0
offset_bottom = 629.0
theme_override_font_sizes/font_size = 20

[node name="QuestionTimer" type="Timer" parent="."]

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(212, 226)
scale = Vector2(5.51562, 5.54688)
sprite_frames = SubResource("SpriteFrames_w14is")
animation = &"attack"
autoplay = "default"

[node name="Enemy" type="AnimatedSprite2D" parent="."]
position = Vector2(964, 258)
scale = Vector2(5.51562, 5.54688)
sprite_frames = SubResource("SpriteFrames_d2u18")
autoplay = "default"
frame_progress = 0.146364

[node name="HPItem" type="TextureRect" parent="."]
offset_left = 40.0
offset_top = 44.0
offset_right = 72.0
offset_bottom = 76.0
texture = ExtResource("4_b80xg")
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gfijl")
}
autoplay = "new_animation"

[node name="TileMap" type="TileMap" parent="."]
z_index = -5
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_ant2b")
format = 2
layer_0/tile_data = PackedInt32Array(327680, 0, 6, 393216, 0, 7, 458752, 0, 8, 524288, 0, 9, 327681, 65536, 6, 393217, 65536, 7, 458753, 65536, 8, 524289, 65536, 9, 327682, 131072, 6, 393218, 131072, 7, 458754, 131072, 8, 524290, 131072, 9, 327683, 196608, 6, 393219, 196608, 7, 458755, 196608, 8, 524291, 196608, 9, 327684, 0, 6, 393220, 0, 7, 458756, 0, 8, 524292, 0, 9, 327685, 65536, 6, 393221, 65536, 7, 458757, 65536, 8, 524293, 65536, 9, 327686, 131072, 6, 393222, 131072, 7, 458758, 131072, 8, 524294, 131072, 9, 327687, 196608, 6, 393223, 196608, 7, 458759, 196608, 8, 524295, 196608, 9, 327688, 0, 6, 393224, 0, 7, 458760, 0, 8, 524296, 0, 9, 327689, 65536, 6, 393225, 65536, 7, 458761, 65536, 8, 524297, 65536, 9, 327690, 131072, 6, 393226, 131072, 7, 458762, 131072, 8, 524298, 131072, 9, 327691, 196608, 6, 393227, 196608, 7, 458763, 196608, 8, 524299, 196608, 9, 327692, 0, 6, 393228, 0, 7, 458764, 0, 8, 524300, 0, 9, 327693, 65536, 6, 393229, 65536, 7, 458765, 65536, 8, 524301, 65536, 9, 327694, 131072, 6, 393230, 131072, 7, 458766, 131072, 8, 524302, 131072, 9, 327695, 196608, 6, 393231, 196608, 7, 458767, 196608, 8, 524303, 196608, 9, 327696, 0, 6, 393232, 0, 7, 458768, 0, 8, 524304, 0, 9, 327697, 65536, 6, 393233, 65536, 7, 458769, 65536, 8, 524305, 65536, 9, 327698, 131072, 6, 393234, 131072, 7, 458770, 131072, 8, 524306, 131072, 9, 327699, 196608, 6, 393235, 196608, 7, 458771, 196608, 8, 524307, 196608, 9, 327700, 0, 6, 393236, 0, 7, 458772, 0, 8, 524308, 0, 9, 327701, 65536, 6, 393237, 65536, 7, 458773, 65536, 8, 524309, 65536, 9, 327702, 131072, 6, 393238, 131072, 7, 458774, 131072, 8, 524310, 131072, 9, 327703, 196608, 6, 393239, 196608, 7, 458775, 196608, 8, 524311, 196608, 9, 65556, 655360, 8, 131092, 655360, 9, 196628, 655360, 8, 262164, 655360, 9, 65557, 720896, 8, 131093, 720896, 9, 196629, 720896, 8, 262165, 720896, 9, 65558, 786432, 8, 131094, 786432, 9, 196630, 786432, 8, 262166, 786432, 9, 65559, 851968, 8, 131095, 851968, 9, 196631, 851968, 8, 262167, 851968, 9, 327704, 0, 6, 393240, 0, 7, 458776, 0, 8, 524312, 0, 9, 327705, 65536, 6, 393241, 65536, 7, 458777, 65536, 8, 524313, 65536, 9, 327706, 131072, 6, 393242, 131072, 7, 458778, 131072, 8, 524314, 131072, 9, 327707, 196608, 6, 393243, 196608, 7, 458779, 196608, 8, 524315, 196608, 9, 655359, 0, 8, 720895, 0, 9, 589824, 65536, 8, 655360, 65536, 9, 589825, 131072, 8, 655361, 131072, 9, 589826, 196608, 8, 655362, 196608, 9, 589827, 0, 8, 655363, 0, 9, 589828, 65536, 8, 655364, 65536, 9, 589829, 131072, 8, 655365, 131072, 9, 589830, 196608, 8, 655366, 196608, 9, 589831, 0, 8, 655367, 0, 9, 589832, 65536, 8, 655368, 65536, 9, 589833, 131072, 8, 655369, 131072, 9, 589834, 196608, 8, 655370, 196608, 9, 589835, 0, 8, 655371, 0, 9, 589836, 65536, 8, 655372, 65536, 9, 589837, 131072, 8, 655373, 131072, 9, 589838, 196608, 8, 655374, 196608, 9, 589839, 0, 8, 655375, 0, 9, 589840, 65536, 8, 655376, 65536, 9, 589841, 131072, 8, 655377, 131072, 9, 589842, 196608, 8, 655378, 196608, 9, 589843, 0, 8, 655379, 0, 9, 589844, 65536, 8, 655380, 65536, 9, 589845, 131072, 8, 655381, 131072, 9, 589846, 196608, 8, 655382, 196608, 9, 720915, 0, 8, 786451, 0, 9, 720916, 65536, 8, 786452, 65536, 9, 720917, 131072, 8, 786453, 131072, 9, 720918, 196608, 8, 786454, 196608, 9, 720911, 0, 8, 786447, 0, 9, 720912, 65536, 8, 786448, 65536, 9, 720913, 131072, 8, 786449, 131072, 9, 720914, 196608, 8, 786450, 196608, 9, 720907, 0, 8, 786443, 0, 9, 720908, 65536, 8, 786444, 65536, 9, 720909, 131072, 8, 786445, 131072, 9, 720910, 196608, 8, 786446, 196608, 9, 720903, 0, 8, 786439, 0, 9, 720904, 65536, 8, 786440, 65536, 9, 720905, 131072, 8, 786441, 131072, 9, 720906, 196608, 8, 786442, 196608, 9, 720899, 0, 8, 786435, 0, 9, 720900, 65536, 8, 786436, 65536, 9, 720901, 131072, 8, 786437, 131072, 9, 720902, 196608, 8, 786438, 196608, 9, 720919, 0, 8, 786455, 0, 9, 720920, 65536, 8, 786456, 65536, 9, 720921, 131072, 8, 786457, 131072, 9, 720922, 196608, 8, 786458, 196608, 9, 589847, 0, 8, 655383, 0, 9, 589848, 65536, 8, 655384, 65536, 9, 589849, 131072, 8, 655385, 131072, 9, 589850, 196608, 8, 655386, 196608, 9, 786431, 0, 8, 851967, 0, 9, 720896, 65536, 8, 786432, 65536, 9, 720897, 131072, 8, 786433, 131072, 9, 720898, 196608, 8, 786434, 196608, 9, 65554, 524288, 8, 131090, 524288, 9, 196626, 524288, 8, 262162, 524288, 9, 65555, 589824, 8, 131091, 589824, 9, 196627, 589824, 8, 262163, 589824, 9, 65548, 524288, 8, 131084, 524288, 9, 196620, 524288, 8, 262156, 524288, 9, 65549, 589824, 8, 131085, 589824, 9, 196621, 589824, 8, 262157, 589824, 9, 65550, 655360, 8, 131086, 655360, 9, 196622, 655360, 8, 262158, 655360, 9, 65551, 720896, 8, 131087, 720896, 9, 196623, 720896, 8, 262159, 720896, 9, 65552, 786432, 8, 131088, 786432, 9, 196624, 786432, 8, 262160, 786432, 9, 65553, 851968, 8, 131089, 851968, 9, 196625, 851968, 8, 262161, 851968, 9, 65542, 524288, 8, 131078, 524288, 9, 196614, 524288, 8, 262150, 524288, 9, 65543, 589824, 8, 131079, 589824, 9, 196615, 589824, 8, 262151, 589824, 9, 65544, 655360, 8, 131080, 655360, 9, 196616, 655360, 8, 262152, 655360, 9, 65545, 720896, 8, 131081, 720896, 9, 196617, 720896, 8, 262153, 720896, 9, 65546, 786432, 8, 131082, 786432, 9, 196618, 786432, 8, 262154, 786432, 9, 65547, 851968, 8, 131083, 851968, 9, 196619, 851968, 8, 262155, 851968, 9, 65536, 524288, 8, 131072, 524288, 9, 196608, 524288, 8, 262144, 524288, 9, 65537, 589824, 8, 131073, 589824, 9, 196609, 589824, 8, 262145, 589824, 9, 65538, 655360, 8, 131074, 655360, 9, 196610, 655360, 8, 262146, 655360, 9, 65539, 720896, 8, 131075, 720896, 9, 196611, 720896, 8, 262147, 720896, 9, 65540, 786432, 8, 131076, 786432, 9, 196612, 786432, 8, 262148, 786432, 9, 65541, 851968, 8, 131077, 851968, 9, 196613, 851968, 8, 262149, 851968, 9, -65536, 524288, 6, 0, 524288, 7, -65535, 589824, 6, 1, 589824, 7, -65534, 655360, 6, 2, 655360, 7, -65533, 720896, 6, 3, 720896, 7, -65532, 786432, 6, 4, 786432, 7, -65531, 851968, 6, 5, 851968, 7, -65530, 524288, 6, 6, 524288, 7, -65529, 589824, 6, 7, 589824, 7, -65528, 655360, 6, 8, 655360, 7, -65527, 720896, 6, 9, 720896, 7, -65526, 786432, 6, 10, 786432, 7, -65525, 851968, 6, 11, 851968, 7, -65524, 524288, 6, 12, 524288, 7, -65523, 589824, 6, 13, 589824, 7, -65522, 655360, 6, 14, 655360, 7, -65521, 720896, 6, 15, 720896, 7, -65520, 786432, 6, 16, 786432, 7, -65519, 851968, 6, 17, 851968, 7, -65518, 524288, 6, 18, 524288, 7, -65517, 589824, 6, 19, 589824, 7, -65516, 655360, 6, 20, 655360, 7, -65515, 720896, 6, 21, 720896, 7, -65514, 786432, 6, 22, 786432, 7, -65513, 851968, 6, 23, 851968, 7)

[node name="Healthbar" parent="." instance=ExtResource("7_w14is")]
offset_left = 914.0
offset_top = 160.0
offset_right = 1060.0
offset_bottom = 195.0

[node name="TextureRect" parent="Healthbar" index="1"]
position = Vector2(53.75, 16)
scale = Vector2(2.74375, 2.09167)

[editable path="Healthbar"]
